# todo_cli

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: tasks.json
src/to_do_cli/: main.py  parser.py  storage.py  tasks.py
tests/: test_app.py  test_cli_basic.py  test_cli_integration.py  test_storage.py  test_tasks.py
