[project]
name = "to-do-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "4thNote",email = "4thnote@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "to_do_cli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
