[project]
name = "to-do-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "4thNote",email = "4thnote@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "to_do_cli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "black (>=25.11.0,<26.0.0)"
]

[tool.poetry.scripts]
todo = "to_do_cli.main:main"
